fix(ZNTA-2148) added whitespace above notification modal content

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -3362,7 +3362,8 @@ tbody.collapse {
   border-radius: @spacing-rh;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.185);
   padding: @spacing-rq;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  margin-top: 2rem;
 }
 
 .modal-content {
